# ezi

./: CMakeLists.txt  README.md
cmake/: EnableCXX11.cmake  FindWordNet.cmake
data/: documents_simple.txt  keywords_simple.txt
src/common/: program_options.h
src/db/: CMakeLists.txt  document.cpp  document.h  document_database.cpp  document_database.h
src/engine/: CMakeLists.txt  query_expander.cpp  query_expander.h  search_engine.cpp  search_engine.h
src/io/: CMakeLists.txt  input_file_reader_interface.h  input_reader_interface.h  porter_stemmer.cpp  porter_stemmer.h  porter_stemmer_impl.c  porter_stemmer_impl.h  program_options_reader.cpp  program_options_reader.h  program_options_reader_interface.h  simple_tokenizer.cpp  simple_tokenizer.h  stemmer_interface.h  text_file_input_reader.cpp  text_file_input_reader.h  text_input_reader.cpp  text_input_reader.h  tokenizer_base.cpp  tokenizer_base.h
src/main/: CMakeLists.txt  application.cpp  application.h  main.cpp
